--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-*.* linguist-language=java
+*.js linguist-language=java
+*.css linguist-language=java
+*.html linguist-language=java
+*.java linguist-language=java
