--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-*.js linguist-language=java
-*.css linguist-language=java
-*.html linguist-language=java
-*.java linguist-language=java
+*.js linguist-language=none
+*.css linguist-language=none
+*.html linguist-language=none
