--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -184,6 +184,8 @@ social:
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
   Twitter: https://twitter.com/haruki959 || fab fa-twitter
+  YuQue: https://www.yuque.com/newreport || fab iconfont app-lark_grey
+
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
   #StackOverflow: https://stackoverflow.com/yourname || fab fa-stack-overflow
   #YouTube: https://youtube.com/yourname || fab fa-youtube
