--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -183,7 +183,7 @@ social:
   E-Mail: mailto:haruki959@qq.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
-  Twitter: https://twitter.com/haruki959 || fab fa-twitter
+  #Twitter: https://twitter.com/haruki959 || fab fa-twitter
   YuQue: https://www.yuque.com/newreport || fab iconfont app-lark_grey
 
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
