--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: NewReport
 subtitle: ''
 description: ''
-keywords:
+keywords: linux、docker、k8s、nas、go、c#、python
 author: haruki
 language: zh-CN
 timezone: 'Asia/Shanghai'
